[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Actors/PNG/Default size/tank_bullet3.png" type="Texture" id=1]
[ext_resource path="res://src/Projectiles/Bullet.gd" type="Script" id=2]
[ext_resource path="res://src/World/GameCamera2D.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Bullet" type="Area2D" groups=["BULLET_COUNT"]]
position = Vector2( -56, -24 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="GameCamera2D" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bullet_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
